# scholarship-system

./: .env.dev  .env.example  .env.example.dev  .env.example.prod  .env.example.prod-db  .env.example.staging  .env.example.staging-db  .env.prod-db-monitoring.example  .env.staging  .env.staging-db-monitoring.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .run-backend-tests.sh  .secrets.baseline  APPLICATION_ID_UPGRADE_SUMMARY.md  BANK_VERIFICATION_IMPLEMENTATION.md  CLAUDE.md  COLLEGE_REVIEW_AUTO_REDISTRIBUTION_FIX.md  COLLEGE_REVIEW_COMPLETE_FIX.md  COLLEGE_REVIEW_FIX_SUMMARY.md  DEPLOYMENT.md  DEPRECATED_CODE_CLEANUP_REPORT.md  DEVELOPMENT.md  DEV_SETUP.md  EMAIL_AUTOMATION_INTEGRATION.md  FRONTEND_TEST_SUMMARY.md  GEMINI.md  GITHUB_SECRETS.md  MOCK_STUDENT_API_INTEGRATION.md  Makefile  NGINX_MONITORING_TEST.md  QUICKSTART.md  QUOTA_MANAGEMENT_FIXES.md  README.md  REFACTOR_SUMMARY.md  SCHOLARSHIP_MODEL_UPDATE_SUMMARY.md  SECRETS_SETUP.md  SERVICE_REFACTORING_CHECKLIST.md  (+24 more)
backend/: .bandit  .coveragerc  .env.example  .env.production.example  .env.staging.example  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  DATABASE_SETUP.md  Dockerfile  MIGRATION_STRATEGY.md  README.md  SCORING_REFACTORING_COMPLETED.md  TESTING_STATUS.md  UPDATE_APPLICATION_SERVICE.md  alembic.ini  check_and_fix_roster_consistency.py  coverage.json  create_notification_reads_table.py  create_test_announcements.py  db_data_backup.sql  db_schema_backup.sql  debug_announcements.py  debug_clone_issue.py  docker-compose.yml  init-db.sql  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements.txt  run_unit_tests.py  setup.cfg  setup_bug_prevention.py  test_bank_doc_display.py  test_bank_verification.py  test_college_review_management.py  test_complete_bank_doc_flow.py  (+15 more)
backend/.github/codeql/: README.md  codeql-config.yml
backend/.github/workflows/: schema_validation.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_scholarship_system_tables.py  002_enhance_applications_for_issue_10.py  05a291e3cca0_remove_total_score_from_ranking_items.py  06e8a66d9437_cleanup_old_applications.py  07e9ece93d90_add_backup_info_to_payment_roster_items.py  09a6cf986f5c_seed_academy_data.py  0a35efe15189_add_ranking_id_to_payment_rosters.py  0f8f3a9bbaaf_add_configuration_management_fields_and_.py  1160dcaa4f23_rename_metadata_to_audit_metadata_in_.py  20250805_061614_add_performance_indexes_quota_management.py  20251028_add_bank_verification_tasks_table.py  20251028_add_passbook_cover_to_student_bank_accounts.py  20251028_add_performance_indexes.py  20251028_add_review_stage_to_applications.py  20251028_cleanup_application_status_enum.py  20251028_drop_college_reviews_table.py  20251028_remove_college_review_dependency.py  20251031_add_minio_object_name_to_payment_rosters.py  20260512_encrypt_std_pid.py  20260513_add_deadline_to_document_requests.py  20260513_scrub_pii_from_audit_logs.py  20260515_email_templates_scholarship_type_id.py  20260515_merge_5_heads.py  20260521_merge_renewal_main.py  20260521_merge_revoke_supplementary.py  20260521_revoke_suspend.py  20260529_backfill_roster_national_id.py  20260529_merge_roster_supp_docs.py  20260530_scheduled_emails_created_by_nullable.py  20260531_add_performance_indexes.py  20260608_merge_shared_quota_item_restore.py  20260608_shared_quota_pools_add.py  20260608_shared_quota_pools_drop.py  20260712_add_applications_user_id_index.py  20260714_drop_application_document.py  24becd31ed61_decrypt_empty_sensitive_values.py  24f4d6ba449b_add_condition_query_to_email_automation_.py  25101514470356be_force_cascade_college_reviews.py  2e6c27484cb1_add_student_bank_accounts_table.py  2e7b490e60dc_add_batch_import_tables_and_fields.py  (+101 more)
backend/alembic/versions_backup/: 4f0a9ad1219f_initial_schema_and_lookup_tables.py  4f22265b1968_add_performance_indexes_for_boolean_.py  5ac85532364d_add_scholarship_email_templates_table.py  6b9a429f965b_reorganize_email_templates_by_sending_.py  91f7e98e5d0a_scholarship_reference_data.py  create_scholarship_rules_table.py  d4198ecb46e2_add_email_automation_rules_table.py
backend/app/: main.py  seed.py
backend/app/core/: auto_response_converter.py  cache.py  college_mappings.py  config.py  database_health.py  deps.py  dynamic_config.py  encrypted_json.py  enroll_types.py  exceptions.py  init_db.py  init_lookup_tables.py  metrics.py  path_security.py  pii_crypto.py  rate_limiting.py  regex_validator.py  schema_validation.py  security.py
backend/app/db/: base.py  base_class.py  deps.py  seed_regulations_doc.py  seed_scholarship_configs.py  seed_system_settings.py  session.py
backend/app/integrations/: __init__.py
backend/docs/: ALTERNATE_PROMOTION_SYSTEM.md  COMPLETION_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_REPORT.md  MIGRATION_STRATEGY.md  MIGRATION_SUMMARY.md  TEST_SUMMARY.md  TODO_STATUS.md  VERIFICATION_REPORT.md  api_testing_guide.md  comprehensive_bug_prevention.md  dev-config.md  preventing_schema_validation_errors.md  renewal_period_changes_summary.md  scholarship_renewal_design.md  student_data_migration_summary.md  student_data_structure.md
backend/exports/: .gitkeep
backend/scripts/: check_deadlines.sh  format-code.sh  generate_received_months_sample.py  init_scholarship_email_templates.py  init_system_email_templates.py  pre_commit_schema_check.py  rotate_pii_keys.py  seed_distribution_test_data.py  seed_summary_export_demo.py  setup-precommit.sh
backend/tests/: conftest.py  test_api_schema_validation.py  test_application_field_export_validation.py  test_application_summary_export_endpoint.py  test_auto_allocate_preview.py  test_bank_verification_sanitization.py  test_college_ranking_export_service.py  test_distribution_roster_pipeline.py  test_migration_shared_quota_pools.py  test_phd_sub_type_selection.py  test_regex_validator.py  test_review_authorization.py
mock-student-api/: Dockerfile  README.md  auth.py  data_generator.py  docker-compose.yml  main.py  main_db_version.py  models.py  pyproject.toml  requirements.txt  test_api.py
(+1512 files in other folders)
