[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/alembic/versions/*"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".pytest_cache", ".mypy_cache", "alembic/versions", "*.pyc", ".env", "venv", "env"]
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 40
docstring-convention = "google"
show-source = true
statistics = true
count = true

[tool.pylint.master]
ignore = ["CVS", "alembic", "migrations", ".git", "__pycache__", ".pytest_cache", ".mypy_cache"]
ignore-patterns = ["test_.*?\\.py", "conftest\\.py"]

[tool.pylint."messages control"]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods (for Pydantic models)
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0801",  # duplicate-code
]

[tool.pylint.format]
max-line-length = 120
indent-string = "    "

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.schemas.*",
    "app.services.*",
    "app.api.*",
    "tests.*",
    "alembic.*",
    "sqlalchemy.*",
    "fastapi.*",
    "pydantic.*",
    "pytest.*",
    "httpx.*",
    "redis.*",
    "minio.*"
]
disallow_untyped_defs = false
ignore_errors = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["/tests", "/test_", "*_test.py", "/migrations"]
severity = "medium"
confidence = "medium"

[project]
name = "scholarship-system-backend"
version = "1.0.0"
description = "Scholarship Management System Backend API"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and web framework
    "fastapi==0.129.0",
    "starlette==0.52.1",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.22",
    
    # Database and ORM
    "sqlalchemy==2.0.44",
    "alembic==1.17.2",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.11",
    
    # Authentication and Security
    "PyJWT[crypto]==2.9.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "cryptography==46.0.5",
    "python-decouple==3.8",
    
    # Data validation and serialization
    "pydantic==2.10.0",
    "pydantic[email]==2.10.0",
    "pydantic-settings==2.6.0",
    "email-validator==2.1.0",
    
    # HTTP client and utilities
    "httpx==0.28.1",
    "requests==2.32.5",
    "aiofiles==24.1.0",
    "python-dateutil==2.8.2",
    "tenacity==9.1.2",
    
    # Caching
    "redis==7.0.1",
    
    # Task scheduling
    "apscheduler==3.10.4",
    "croniter==1.4.1",
    
    # Email services
    "fastapi-mail==1.4.1",
    "jinja2==3.1.6",
    
    # File processing and OCR
    "pillow==12.1.1",
    "opencv-python==4.12.0.88",
    "pytesseract==0.3.10",
    "google-generativeai==0.8.3",
    "python-magic==0.4.27",
    
    # Object Storage
    "minio==7.2.18",
    
    # Excel processing
    "pandas==2.3.3",
    "openpyxl==3.1.2",
    
    # Logging and monitoring
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.7",
    "pytest-asyncio==0.26.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.16.0",
    "httpx==0.28.1",
    "faker==34.0.2",
    "black==25.1.0",
    "flake8==7.1.1",
    "isort==6.1.0",
    "mypy==1.18.2",
    "pylint==3.4.3",
    "bandit==1.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
